force-app/main/default/objects/AccountChanged__e/AccountChanged__e.object-meta.xml
<CustomObject>
    <label>AccountChanged</label>
    <pluralLabel>AccountsChanged</pluralLabel>
</CustomObject>