force-app/main/default/objects/AccountChanged__e/fields/BillingCountryCode__c.field-meta.xml
<CustomField>
    <fullName>BillingCountryCode__c</fullName>
    <label>Billing Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>