force-app/main/default/objects/AccountChanged__e/fields/BillingPostal__c.field-meta.xml
<CustomField>
    <fullName>BillingPostal__c</fullName>
    <label>Billing Postal</label>
    <length>30</length>
    <type>Text</type>
</CustomField>