force-app/main/default/objects/AccountChanged__e/fields/BusinessPartnerCategory__c.field-meta.xml
<CustomField>
    <fullName>BusinessPartnerCategory__c</fullName>
    <description>Business partner category classification for ERP integration.</description>
    <label>Business Partner Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>