force-app/main/default/objects/AccountChanged__e/fields/BusinessPartnerGrouping__c.field-meta.xml
<CustomField>
    <fullName>BusinessPartnerGrouping__c</fullName>
    <description>Business partner grouping classification for ERP integration.</description>
    <label>Business Partner Grouping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>