force-app/main/default/objects/AccountChanged__e/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Standard 2-letter (ISO 3166-1 alpha-2) or full country name for address records. Examples: &quot;DE&quot; for Germany, &quot;US&quot; for United States. Maximum length: 255 characters.</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>