force-app/main/default/objects/AccountChanged__e/fields/CustomerGroup2__c.field-meta.xml
<CustomField>
    <fullName>CustomerGroup2__c</fullName>
    <label>Customer Group 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>