force-app/main/default/objects/AccountChanged__e/fields/CustomerTaxClassification__c.field-meta.xml
<CustomField>
    <fullName>CustomerTaxClassification__c</fullName>
    <description>Customer tax classification code for ERP integration.</description>
    <label>Customer Tax Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>