force-app/main/default/objects/AccountChanged__e/fields/ERPCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPCustomerNumber__c</fullName>
    <description>Unique identifier for the customer account in the external ERP system. This value is automatically synchronized during integration and should not be manually modified. Maximum length: 225 characters.</description>
    <label>ERP Customer Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>