force-app/main/default/objects/AccountChanged__e/fields/ERPLockStatus__c.field-meta.xml
<CustomField>
    <fullName>ERPLockStatus__c</fullName>
    <description>Indicates whether the record is locked in the ERP system due to compliance checks (e.g., sanction list screening, credit rating validation). Possible values: &apos;Credit Rating&apos;, &apos;Sanction List&apos;, &apos;Not Sanctioned&apos;.</description>
    <label>ERP Lock Status</label>
    <length>225</length>
    <type>Text</type>
</CustomField>