force-app/main/default/objects/AccountChanged__e/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>Unique identifier of Salesforce entity.</description>
    <label>Id</label>
    <length>225</length>
    <type>Text</type>
</CustomField>