force-app/main/default/objects/AccountChanged__e/fields/LegalForm__c.field-meta.xml
<CustomField>
    <fullName>LegalForm__c</fullName>
    <description>Official legal entity type of the company (e.g., GmbH, AG, LLC, Inc.). Used for contractual and compliance purposes. Must match registration documents exactly.</description>
    <label>Legal Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>