force-app/main/default/objects/AccountChanged__e/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Primary name or designation of the record. For persons: use &quot;FirstName LastName&quot; format. For companies: use official registered name without legal form abbreviations.</description>
    <label>Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>