force-app/main/default/objects/AccountChanged__e/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <description>Stores the unique identifier (ID) of the user or queue who owns this record. Format: 15 or 18-character Salesforce ID.</description>
    <label>OwnerId</label>
    <length>225</length>
    <type>Text</type>
</CustomField>