force-app/main/default/objects/AccountChanged__e/fields/SalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>SalesOrganization__c</fullName>
    <description>Sales organization code for ERP integration.</description>
    <label>Sales Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>