force-app/main/default/objects/AccountChanged__e/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <description>Formal title used in correspondence (e.g., &apos;Herr&apos;, &apos;Frau&apos;, &apos;Firma&apos;). Determines how the contact is addressed in communications and legal documents.</description>
    <label>Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>