force-app/main/default/objects/AccountChanged__e/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <description>Complete delivery address in single-line format (street, city, postal code, country). Used for logistics and package labeling.</description>
    <label>Shipping Address</label>
    <length>225</length>
    <type>Text</type>
</CustomField>