force-app/main/default/objects/AccountChanged__e/fields/ShippingCountryCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingCountryCode__c</fullName>
    <label>Shipping Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>