force-app/main/default/objects/AccountChanged__e/fields/StatisticParentDistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>StatisticParentDistributionChannel__c</fullName>
    <label>Statistic Parent Distribution Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>