force-app/main/default/objects/AccountChanged__e/fields/StatisticParentErpCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>StatisticParentErpCustomerNumber__c</fullName>
    <label>Statistic Parent ERP Customer Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>