force-app/main/default/objects/AccountChanged__e/fields/StatisticParentSalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>StatisticParentSalesOrganization__c</fullName>
    <label>Statistic Parent Sales Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>